--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-#content {
-
-}
-
-.article {
-
-}
 
 #toggle_speech {
 	color: gray;
@@ -15,24 +8,30 @@
 }
 
 .active {
-	width: 500px !important;
+	border: thin solid #E0E0E0 ;
+	background-color: white;
 	position: relative;
-}
+	box-shadow: 10px 10px 5px #888888;
 
-.inactive {
-	width: 150px;
-	height: 150px;
 }
 
 .article > span {
-    display: inline-block;
+    float: left;
     padding: 10px;
-    width: 220px;
+    width: 250px;
+    margin: 10px;
+    height: 50%;
+    position: relative;
+}
+
+.article > span > img {
+	margin-top: 20px;
+	position: absolute;
+	top: 40%;
 }
 
 .article > span:hover {
-	border: thin solid gainsboro;
-	background-color: snow;
+	background-color: #F0F0F0;
 	cursor: pointer;
 }
 
